# rustdoc-checker

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: USAGE.md  example_bad.rs
src/: main.rs
